# stacksats

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
data/: brk_data_manifest.json  brk_merged_metrics_taxonomy.json
docs/: README.md  app.md  commands.md  data-source.md  docs_ownership.md  faq.md  framework.md  glossary.md  index.md  migration.md  model.md  model_backtest.md  objects.md  release.md  stability.md  tasks.md  troubleshooting.md  ux-plan.md  validation_checklist.md  whats-new.md
examples/: model_example.py  model_example_notebook.py  model_example_notebook_browser.py  model_mvrv_plus.py
requirements/: constraints-maintainer.txt
scripts/: check_coverage.sh  check_docs_pages_canary.py  check_docs_refs.sh  check_docs_ux.py  check_markdown_scope.sh  check_no_coinmetrics_refs.py  check_polars_hotpath_refs.py  check_polars_only_refs.py  check_release_docs_sync.py  clean_local.sh  compare_duckdb_alpha.py  compare_strategies.py  export_notebook_demo.sh  fetch_brk_data.py  generate_animation.py  generate_merged_metrics_taxonomy.py  generate_strategy_docs.py  install_hooks.sh  new_strategy.py  profile_strategy_hotpaths.py  publish_pypi_manual.sh  release_check.sh  release_wheel_smoke.py  render_duckdb_schema_doc.py  research_strategy.py  run_all_strategies.py  stamp_docs_pages_marker.py  strategies.template.md  sync_objects_schema_docs.py  test_example_commands.py  train_duckdb_factor_strategy.py
stacksats/: __init__.py  _contract.py  _optional.py  animation_data.py  animation_render.py  api.py  backtest.py  btc_price_fetcher.py  cli.py  column_map_provider.py  data_btc.py  data_setup.py  docs_merged_metrics_taxonomy.py  docs_objects_schema.py  eda.py  execution_adapters.py  execution_state.py  export_weights.py  export_weights_core.py  export_weights_runtime.py  export_weights_sql.py  feature_materialization.py  feature_providers.py  feature_registry.py  feature_time_series.py  framework_contract.py  loader.py  matplotlib_setup.py  modal_app.py  model_development.py  model_development_allocation.py  model_development_features.py  model_development_helpers.py  model_development_weights.py  plot_mvrv.py  plot_mvrv_render.py  plot_weights.py  plot_weights_data.py  plot_weights_render.py  prelude.py  (+12 more)
tests/: __init__.py  conftest.py  test_api_enhancements.py  test_backtest_errors.py  test_backtest_export_parity.py  test_backtest_performance.py  test_bdd_date_ranges.py  test_btc_price_fetcher.py  test_btc_price_fetcher_historical.py  test_coinmetrics_btc_csv.py  test_debug_weights.py  (+15 more)
(+377 files in other folders)
