[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stacksats"
dynamic = ["version"]
description = "Bitcoin DCA model development and backtesting toolkit"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "StackSats Contributors" }]
maintainers = [{ name = "StackSats Maintainers", email = "team@hypertrial.ai" }]
keywords = ["bitcoin", "dca", "backtesting", "quant", "crypto"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "pandas==3.0.0",
  "numpy==2.4.2",
  "scipy==1.17.0",
  "requests==2.32.5",
  "matplotlib==3.10.8",
  "seaborn==0.13.2",
  "tenacity==9.1.4",
]

[project.urls]
Homepage = "https://github.com/hypertrial/stacksats"
Repository = "https://github.com/hypertrial/stacksats"
Source = "https://github.com/hypertrial/stacksats"
Documentation = "https://hypertrial.github.io/stacksats/"
Issues = "https://github.com/hypertrial/stacksats/issues"
Changelog = "https://github.com/hypertrial/stacksats/blob/main/CHANGELOG.md"
Security = "https://github.com/hypertrial/stacksats/security/policy"

[project.optional-dependencies]
deploy = [
  "psycopg2-binary==2.9.11",
  "python-dotenv==1.2.1",
]
dev = [
  "pytest==9.0.2",
  "pytest-bdd==8.1.0",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
  "pytest-benchmark==5.2.3",
  "pytest-xdist==3.8.0",
  "responses==0.25.8",
  "freezegun==1.5.5",
  "hypothesis==6.151.6",
  "ruff==0.15.0",
  "vulture==2.14",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.28.0",
  "marimo==0.19.11",
  "codespell>=2.3.0",
  "pymarkdownlnt>=0.9.0",
]

[tool.ruff]
required-version = "==0.15.0"
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[project.scripts]
stacksats = "stacksats.cli:main"
stacksats-plot-mvrv = "stacksats.plot_mvrv:main"
stacksats-plot-weights = "stacksats.plot_weights:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stacksats", "stacksats.*"]

[tool.setuptools.package-data]
stacksats = ["py.typed"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
